[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Cutscene/IntroCutscenePlayer.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/QuitButton.tscn" type="PackedScene" id=2]

[sub_resource type="DynamicFontData" id=1]

font_path = "res://Font/segoesc.ttf"

[sub_resource type="DynamicFont" id=2]

size = 20
use_mipmaps = true
use_filter = false
font_data = SubResource( 1 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="IntroCutscenePlayer" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="RegisterStartTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="CanvasLayer" type="CanvasLayer" parent="." index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="TextHolder" type="Position2D" parent="CanvasLayer" index="0"]

editor/display_folded = true
visible = false
z_index = 100
_sections_unfolded = [ "Z Index" ]

[node name="SpaceToSkip" type="Label" parent="CanvasLayer/TextHolder" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 26.0
margin_top = 643.0
margin_right = 212.0
margin_bottom = 675.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 0.624314 )
text = "Pess space to skip"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="CanvasLayer2" type="CanvasLayer" parent="." index="2"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="QuitButton" parent="CanvasLayer2" index="0" instance=ExtResource( 2 )]

modulate = Color( 1, 1, 1, 0.712706 )
_sections_unfolded = [ "Mouse", "Visibility", "custom_styles" ]


